# paimon-rust

./: .asf.yaml  .gitattributes  .licenserc.yaml  404.html  CLAUDE.md  Cargo.toml  DEPENDENCIES.rust.tsv  MEMORY.md  Makefile  deny.toml  index.html  sitemap.xml
.claude/skills/memory-create/: SKILL.md
.claude/skills/memory-debug/: SKILL.md
.claude/skills/memory-done/: SKILL.md
.claude/skills/memory-history/: SKILL.md
.claude/skills/memory-save/: SKILL.md
.claude/skills/memory-status/: SKILL.md
.claude/skills/memory-switch/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: ci.yml  go_binding_release.yml  release-go-binding.yml  release-rust.yml  release_python_binding.yml  website.yml
architecture/: index.html
bindings/c/: Cargo.toml  DEPENDENCIES.rust.tsv
bindings/c/src/: catalog.rs  error.rs  identifier.rs  lib.rs  result.rs  table.rs  types.rs
bindings/go/: DEPENDENCIES.md  Makefile  RELEASE.md  catalog.go  embed_darwin_amd64.go  embed_darwin_arm64.go  embed_linux_amd64.go  embed_linux_arm64.go  error.go  ffi.go  go.mod  go.sum  identifier.go  lib.go  libpaimon_c.darwin.amd64.dylib.zst  libpaimon_c.darwin.arm64.dylib.zst  libpaimon_c.linux.arm64.so.zst  paimon.go  plan.go  predicate.go  read_builder.go  table.go  table_read.go  table_scan.go  types.go  util_unix.go
bindings/go/example/: main.go
bindings/go/predicate/: predicate.go
bindings/python/: .gitignore  Cargo.toml  DEPENDENCIES.rust.tsv  Makefile  NOTICE  README.md  project-description.md  pyproject.toml
contributing/: index.html
crates/example/: Cargo.toml
crates/example/src/: paimon_datafusion_read.rs  paimon_dv_read.rs  paimon_read.rs
crates/examples/: Cargo.toml
crates/examples/src/: paimon_dv_read.rs  paimon_read.rs
crates/integration_tests/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
crates/integrations/datafusion/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
crates/integrations/datafusion/src/: catalog.rs  delete.rs  error.rs  full_text_search.rs  lib.rs  merge_into.rs  runtime.rs  schema.rs  sql_handler.rs  update.rs
crates/integrations/datafusion/src/physical_plan/: mod.rs  scan.rs
crates/integrations/datafusion/src/table/: mod.rs
crates/integrations/datafusion/tests/: append_merge_into.rs  blob_tests.rs  count_pushdown.rs  cross_partition_tables.rs  delete_tests.rs  dynamic_bucket_tables.rs  merge_into_tests.rs  pk_tables.rs  read_tables.rs  sql_handler_tests.rs  update_tests.rs
crates/integrations/datafusion/tests/common/: mod.rs
crates/paimon/: Cargo.toml  DEPENDENCIES.rust.tsv  README.md
dev/: Makefile  README.md  docker-compose.yaml
dev/spark/: Dockerfile  README.md  provision.py
docs/: mkdocs.yml
docs/src/: datafusion.md  getting-started.md  go-binding.md
getting-started/: index.html
releases/: index.html
scripts/: bump-version.sh  constants.py  dependencies.py  release.sh
search/: search_index.json
(+122 files in other folders)
