# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

[package]
name = "paimon-datafusion"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Apache Paimon DataFusion Integration (read-only)"
categories = ["database"]
keywords = ["paimon", "datafusion", "integrations"]

[dependencies]
async-trait = "0.1"
# Disable default features to avoid pulling in compression (xz2/lzma), which can
# conflict with other crates that link to liblzma.
datafusion = { version = "49", default-features = false, features = [
    "nested_expressions",
    "datetime_expressions",
    "regex_expressions",
    "string_expressions",
    "unicode_expressions",
    "recursive_protection",
] }
paimon = { path = "../../paimon" }
futures = "0.3"
tokio = { version = "1", features = ["macros"] }

